--- a/src/App.css
+++ b/src/App.css
@@ -5,6 +5,29 @@
 
 @custom-variant dark (&:is(.dark *));
 
+@utility no-scrollbar {
+  -ms-overflow-style: none;
+  scrollbar-width: none;
+  &::-webkit-scrollbar {
+    display: none;
+  }
+}
+
+@utility calibration-scroll {
+  &::-webkit-scrollbar {
+    width: 4px;
+  }
+  &::-webkit-scrollbar-track {
+    @apply bg-gray-500 rounded-full;
+  }
+  &::-webkit-scrollbar-thumb {
+    @apply bg-button-primary-active rounded-full;
+  }
+  &::-webkit-scrollbar-thumb:hover {
+    @apply bg-button-primary-active;
+  }
+}
+
 @theme {
   --color-primary: #f6f8ff;
   --color-background: #272d2d;
